--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -38,7 +38,7 @@
 .column,
 .columns {
   width: 100%;
-  float: left;
+  float: center;
   box-sizing: border-box; }
 
 /* For devices larger than 400px */
@@ -121,10 +121,10 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.6;
+  font-size: 1.2em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  line-height: 1.4;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "American Typewriter", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, serif;
   color: #222; }
 
 
@@ -176,7 +176,7 @@ input[type="button"] {
   color: #555;
   text-align: center;
   font-size: 11px;
-  font-weight: 600;
+  font-weight: 800;
   line-height: 38px;
   letter-spacing: .1rem;
   text-transform: uppercase;
@@ -234,10 +234,10 @@ input[type="url"],
 input[type="password"],
 textarea,
 select {
-  height: 38px;
+  height: 28px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
   background-color: #fff;
-  border: 1px solid #D1D1D1;
+  border:1px solid #D1D1D1;
   border-radius: 4px;
   box-shadow: none;
   box-sizing: border-box; }
@@ -271,8 +271,8 @@ select:focus {
 label,
 legend {
   display: block;
-  margin-bottom: .5rem;
-  font-weight: 600; }
+  margin-bottom: .2rem;
+  font-weight: 400; }
 fieldset {
   padding: 0;
   border-width: 0; }
@@ -283,6 +283,9 @@ label > .label-body {
   display: inline-block;
   margin-left: .5rem;
   font-weight: normal; }
+
+
+
 
 
 /* Lists
@@ -344,7 +347,7 @@ input,
 textarea,
 select,
 fieldset {
-  margin-bottom: 1.5rem; }
+  margin-bottom: 1.0rem; }
 pre,
 blockquote,
 dl,
@@ -416,3 +419,22 @@ there.
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
+
+
+
+
+
+/* d3
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+
+svg rect {
+    fill: orange; }
+
+svg text {
+    fill:white;
+    font: 10px sans-serif;
+    text-anchor: end;}
+
+.bar {
+    fill: steelblue;}
